# wayfindr

./: .envrc  Cargo.toml  TODO.md  build  build.sh  vision.txt
launch/: wayfindr
providers/: news.toml  sports.toml  stocks.toml  weather.toml
src/: app.rs  cli.rs  main.rs  process_execution.rs  terminal.rs  tests.rs  types.rs  ui.rs  usage_tracker.rs  utils.rs
src/config/: mod.rs
src/interfaces/: mod.rs  rofi.rs  tui.rs
src/providers/: ai.rs  applications.rs  directories.rs  dynamic.rs  management.rs  mod.rs
src/services/: ai.rs  directory_autocomplete.rs  execution.rs  mod.rs  usage.rs
src/spawners/: ai_query.rs  apps.rs  mod.rs  path_search.rs  unified_search.rs
