[package]
name = "wayfindr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = ["crossterm"] }
shellexpand = "3.1.1"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.20.0"
