[package]
name = "wayfindr"
version = "0.2.1"
edition = "2021"
description = "A fast, AI-enhanced launcher for Wayland/Hyprland with TUI and Rofi interfaces"
license = "MIT"
repository = "https://github.com/cjanua/wayfindr"

[dependencies]
# Core
anyhow = "1.0.98"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }

# Config / Environment
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.22"
dirs = "6.0.0"

# Time
chrono = { version = "0.4.41", features = ["serde"] }

# Terminal UI
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = ["crossterm"] }

# HTTP Client
reqwest = { version = "0.12.15", features = ["json"] }

# CLI Args
clap = { version = "4.5.38", features = ["derive"] }

# Utilities
shellexpand = "3.1.1"
async-trait = "0.1.88"
handlebars = "6.3.2"
regex = "1.11.1"
colored = "3.0.0"

[dev-dependencies]
# tempfile = "3.20"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# [lints.rust]
# dead_code = "allow"